<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearlayoutFormActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/registration"
        android:textSize="48sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@drawable/et_custom"
            android:padding="15dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@drawable/et_custom"
            android:padding="15dp"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:buttonTint="@color/black"
                android:layout_marginStart="16dp"
                android:textSize="14sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginStart="16dp"
                android:buttonTint="@color/black"
                android:textSize="14sp"/>
</RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password2"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@drawable/et_custom"
            android:padding="15dp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        android:buttonTint="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:text="@string/register"/>

</LinearLayout>