<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".AssigmentFormActivity">

    <TextView
        android:id="@+id/name_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_TextView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:textSize="18sp"
        android:background="@drawable/et_custom"
        android:padding="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/username_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username_TextView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:textSize="18sp"
        android:background="@drawable/et_custom"
        android:padding="15dp"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/password_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username_EditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_TextView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:background="@drawable/et_custom"
        android:padding="15dp"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/confirmPassword_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_EditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/confirmPassword_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/confirmPassword_TextView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:background="@drawable/et_custom"
        android:padding="15dp"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/register_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPassword_EditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:textSize="18sp"
        android:text="@string/register" />


</RelativeLayout>